collapsible pane in content lists, tenant name added and bug with overflaping drpdown fixed

--- a/client/views/content-lists/content-list-automatic.html
+++ b/client/views/content-lists/content-list-automatic.html
@@ -1,6 +1,6 @@
 
 <div class="flex-grid__item flex-grid__item--d-flex flex-grid__item--column">
-    <div class="subnav subnav--lower-z-index subnav--mid-blue-grey">
+    <div class="subnav subnav--mid-blue-grey">
         <button class="navbtn navbtn--left" ng-click="webPublisherContentLists.changeView('content-lists', false)">
             <i class="icon-th"></i>
         </button>
