--- a/client/views/content-lists/preview-pane.html
+++ b/client/views/content-lists/preview-pane.html
@@ -43,7 +43,7 @@
             <img ng-if="webPublisherContentLists.selectedArticle.featureMedia && webPublisherContentLists.selectedArticle.featureMedia.image"
                 ng-src="{{webPublisherContentLists.getViewImage(webPublisherContentLists.selectedArticle)}}"
                 style="max-width:100%; margin-bottom: 1em">
-            <div class="side-panel__content-block-text" ng-bind-html="webPublisherContentLists.bodyHtml"></div>
+            <div class="side-panel__content-block-text sp-imageMaxWidth-wrapper" ng-bind-html="webPublisherContentLists.bodyHtml"></div>
         </div>
     </div>
 </div>
