fix: search input not debounced in output control

--- a/client/views/output/index.html
+++ b/client/views/output/index.html
@@ -16,7 +16,7 @@
                     sd-tooltip="Filter" flow="right">
                     <i class="icon-filter-large"></i>
                 </button>
-                <div sd-search-handler data-title="Search" ng-model='webPublisherOutput.advancedFilters.term'></div>
+                <div sd-search-handler data-title="Search" ng-model='webPublisherOutput.advancedFilters.term' data-debounce="500"></div>
                 <h3 class="subnav__page-title">Output Control</h3>
             </div>
             <div class="subnav subnav--lower-z-index">
