--- a/client/views/content-lists/index.html
+++ b/client/views/content-lists/index.html
@@ -58,7 +58,7 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="sd-column-box__main-column relative"
+                <div class="sd-column-box__main-column relative sd-display-flex-column"
                     ng-include="'content-lists-list.html'"
                     ng-if="webPublisherContentLists.activeView==='content-lists'"></div>
                 <div class="flex-grid flex-grid--grow flex-grid--small-1"
