--- a/client/views/output/preview-pane.html
+++ b/client/views/output/preview-pane.html
@@ -55,7 +55,7 @@
             <img ng-if="webPublisherOutput.selectedArticle.articles[0].featureMedia && webPublisherOutput.selectedArticle.articles[0].featureMedia.image"
                 ng-src="{{webPublisherOutput.getViewImage(webPublisherOutput.selectedArticle.articles[0])}}"
                 style="max-width:100%">
-            <div class="side-panel__content-block-text" ng-bind-html="webPublisherOutput.bodyHtml"></div>
+            <div class="side-panel__content-block-text sp-imageMaxWidth-wrapper" ng-bind-html="webPublisherOutput.bodyHtml"></div>
         </div>
     </div>
 </div>
