feature: related articles in targeted publishing, fix: targeted publishing hardcoded content lists

--- a/client/views/output/publishing-pane.html
+++ b/client/views/output/publishing-pane.html
@@ -45,6 +45,31 @@
         <div class="side-panel__content-block side-panel__content-block--pad-small">
             <div ng-repeat="destination in webPublisherOutput.newDestinations" ng-include="'publish-pane-listitem.html'"></div>
         </div>
+        <!-- Related items -->
+        <div class="side-panel__content-block">
+            <div sd-toggle-box data-title="Related articles" data-open="false" data-style="circle">
+                <ul class="simple-list simple-list--dotted simple-list--no-padding">
+                    <li class="simple-list__item">
+                        <p>J.P. Morgan to settle allegations of violating sanctions: U.S. Treasury</p>
+                        <span class="label-icon label-icon--success" ng-hide="deleteTenant0"><i class="icon-globe"></i> www.sourcefabric.org</span>
+                        <span class="label-icon label-icon--success" ng-hide="deleteTenant1"><i class="icon-globe"></i> www.bbc.co.uk</span>
+                        <span class="label-icon" ng-hide="deleteTenant2"><i class="icon-globe"></i> sp-magazine.s-lab.sourcefabric.org</span>
+                    </li>
+                    <li class="simple-list__item">
+                        <p>Republican Senator Murkowski says has not decided final Kavanaugh vote</p>
+                        <span class="label-icon" ng-hide="deleteTenant0"><i class="icon-globe"></i> www.sourcefabric.org</span>
+                        <span class="label-icon label-icon--success" ng-hide="deleteTenant1"><i class="icon-globe"></i> www.bbc.co.uk</span>
+                        <span class="label-icon" ng-hide="deleteTenant2"><i class="icon-globe"></i> sp-magazine.s-lab.sourcefabric.org</span>
+                    </li>
+                    <li class="simple-list__item">
+                        <p>China bet big on quantum computing. Now the US races to keep up.</p>
+                        <span class="label-icon" ng-hide="deleteTenant0"><i class="icon-globe"></i> www.sourcefabric.org</span>
+                        <span class="label-icon" ng-hide="deleteTenant1"><i class="icon-globe"></i> www.bbc.co.uk</span>
+                        <span class="label-icon label-icon--success" ng-hide="deleteTenant2"><i class="icon-globe"></i> sp-magazine.s-lab.sourcefabric.org</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
     <!-- UNPUBLISH **************************************************** -->
     <div class="side-panel__content" ng-if="webPublisherOutput.activePublishPane === 'unpublish'">
