fix: Errors when creating automatic or manual content list

--- a/client/views/content-lists/list-box.html
+++ b/client/views/content-lists/list-box.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="sd-card__content sd-card__content--scrollable relative">
-        <ul class="sd-card__content-list" ng-if="list.visible">
+        <ul class="sd-card__content-list" ng-if="list.visible && list.id">
             <div sd-list-articles data-list="list" data-type="card"></div>
         </ul>
     </div>
