--- a/client/views/content-lists/index.html
+++ b/client/views/content-lists/index.html
@@ -16,7 +16,7 @@
                     <span ng-if="webPublisherContentLists.selectedTenant.name">/ {{webPublisherContentLists.selectedTenant.name}}</span>
                 </h3>
                 <div class="dropdown dropdown--align-right" dropdown="" sd-tooltip="Create new list" flow="left">
-                    <button class="navbtn dropdown sd-create-btn dropdown-toggle" dropdown__toggle="" aria-haspopup="true" aria-expanded="false">
+                    <button class="navbtn dropdown sd-create-btn dropdown-toggle" dropdown__toggle="" aria-haspopup="true" aria-expanded="false" >
                         <i class="icon-plus-large"></i>
                         <span class="circle"></span>
                     </button>
@@ -30,10 +30,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="sd-column-box--3"
-                ng-class="{'content-nav-closed' : webPublisherContentLists.closedContentNav}">
-                <div class="nav-tabs-vertical"
-                    ng-class="{'nav-tabs-vertical--closed' : !webPublisherContentLists.closedContentNav }">
+            <div ng-class="{'sd-column-box--3' : true,'content-nav-closed' : webPublisherContentLists.closedContentNav}">
+                <div ng-class="{'nav-tabs-vertical' : true, 'nav-tabs-vertical--closed' : !webPublisherContentLists.closedContentNav }">
                     <ul class="nav-tabs-vertical__list">
                         <li class="nav-tabs-vertical__tab">
                             <button class="nav-tabs-vertical__link"
