output control improvements WIP

--- a/client/styles/helperElements.scss
+++ b/client/styles/helperElements.scss
@@ -182,6 +182,10 @@
     display: inline-block;
 }
 
+.cursorPointer{
+    cursor: pointer;
+}
+
 .iconButton {
     border: none;
     background: none;
