feature: output control improvements

--- a/client/views/output/index.html
+++ b/client/views/output/index.html
@@ -82,7 +82,7 @@
 
                 <!-- Published swimlane -->
                 <div class="sd-column-box__main-column"
-                    ng-show="webPublisherOutput.listType == 'published' && webPublisherOutput.swimlaneView"
+                    ng-if="webPublisherOutput.listType == 'published' && webPublisherOutput.swimlaneView"
                     ng-include="'output/swimlane.html'">
 
                 </div>
