--- a/client/views/settings/website-management/manage-general.html
+++ b/client/views/settings/website-management/manage-general.html
@@ -20,6 +20,8 @@
         </div>
         <div class="form__row">
             <span ng-model="newSite.ampEnabled" sd-switch=""></span><label>Enable AMP</label>
+            <span ng-model="newSite.fbiaEnabled" sd-switch=""></span><label>Enable FBIA</label>
+            <span ng-model="newSite.paywallEnabled" sd-switch=""></span><label>Enable Paywall</label>
         </div>
         <div ng-if="newSite.outputChannel">
             <div class="form__row">
